Support Topic lookup using Pulsar binary protocol